# Shachi

./: .gitignore  README.md  pyproject.toml  requirements-conda.txt
.github/workflows/: checks.yml
configs/: config.yaml  config_vllm.yaml
configs/agent/: auction_arena.yaml  auction_arena_random.yaml  cognitive_biases.yaml  digitmat.yaml  econagent.yaml  econagent_staticbaseline.yaml  emotionbench.yaml  lm_caricature.yaml  oasis.yaml  psychobench.yaml  psychobench_random.yaml  sotopia.yaml  sotopia_random.yaml  sotopia_vllm.yaml  stockagent.yaml
configs/launcher/vllm/: disabled.yaml  sotopia_pi.yaml
configs/task/: auction_arena.yaml  cognitive_biases.yaml  digitmat.yaml  econagent.yaml  emotionbench.yaml  lm_caricature.yaml  oasis.yaml  psychobench.yaml  sotopia.yaml  stockagent.yaml
docs/: experimental_settings.ja.md  experimental_settings.md  exploratory_studies.ja.md  exploratory_studies.md  shachi_codebase_guide.html
scripts/: main.py  main_carrying_memory.py  main_stock_oasis.py  main_vllm.py
src/shachi/: __init__.py  base.py
src/shachi/agent/: auction_arena.py  cognitive_biases_agent.py  digitmat_agent.py  econagent.py  emotionagent.py  lm_caricature.py  oasisagent.py  psychobench.py  sotopia.py  stockagent.py
src/shachi/env/auction_arena/: auction_env.py  auction_item.py  bidder.py  bidder_conventions.py  observation.py  prompt_base.py
src/shachi/env/cognitive_biases/: .gitignore  analysis.py  cognitive_biases_env.py
src/shachi/env/cognitive_biases/core/: add_test.py  base.py  testing.py
src/shachi/env/cognitive_biases/tests/Anchoring/: test.py
src/shachi/env/cognitive_biases/tests/Anthropomorphism/: test.py
src/shachi/env/econagent/: econenv.py
src/shachi/env/emergent_analogies_LLM/: .gitignore
src/shachi/env/emergent_analogies_LLM/digit_mat/: digitmat_env.py  generate_base.py  gpt_matprob_results_1thru5.npz  multiple_choice_base.py
src/shachi/env/emotionBench/: emotionenv.py
src/shachi/env/lm_caricature/: lm_caricature_env.py
src/shachi/env/lm_caricature/dep/: .gitignore
src/shachi/env/oasis/: gpt_example.yaml  snsenv.py
src/shachi/env/psychobench/: analysis.py  data_types.py  observation.py  psychobench_env.py  sixteen_personality.py  test_results.py
src/shachi/env/sotopia/: _generate.py  _server.py  environment.py
src/shachi/env/stockagent/: .gitignore  record.py  stockenv.py  util.py
src/shachi/env/stockagent/log/: custom_logger.py
src/shachi/env/stockagent/prompt/: agent_prompt.py
tests/: test_agent_implementations.py  test_base.py  test_environments.py  test_sanity.py
(+66 files in other folders)
